--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
 <head>
-    <title>
-        Amazon-clone
-    </title>
+    <title>Amazon Clone</title>
 </head>
 <body>
-    <h1>100 days Learning challenge</h1>
-    <p>Yes I will do practice</p>
+    <h1>100 days Learning Callenge</h1>
+    <p>Yes i will do practice....</p>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>BOOTSTRAP</li>
+        <li>JAVASCRIPT</li>
+        <li>REACT</li>
+        <li>FIREBASE</li>
+    </ol>
 </body>
 </html>
